--- a/WEB-INF/templates/cost_data/edit_exec.html
+++ b/WEB-INF/templates/cost_data/edit_exec.html
@@ -1,1 +1,1 @@
-$u.val("crud_edit_cost_data_service","default",["$!{id}","$!{name}","$!{data}","$!{price}","$!{note}","$!{from_date}","$!{to_date}","$!{request.UserPrincipal.name}","$!{request.RemoteAddr}"],9)
+$u.val("crud_edit_cost_data_service","default",["$!{id}","$!{name}","$!{data}","$!{price}","$!{note}","$!{from_date}","$!{to_date}","$!{data_limit}","$!{is_mobifone}","$!{mobifone_limit}","$!{status}","$!{request.UserPrincipal.name}","$!{request.RemoteAddr}"],13)
