--- a/WEB-INF/templates/role/index.html
+++ b/WEB-INF/templates/role/index.html
@@ -1,3 +1,4 @@
+<shiro:user>
 <table id="role" class='table table-condensed'>
 	<tr><th colspan='4'><b>${n.i18n.crud_search_button_message.toUpperCase()}</b></th></tr>	<tr>
 	<td title="${n.i18n.crud_valid_length_prefix} 50 ${n.i18n.crud_valid_length_postfix}" id="id_label">${n.i18n.role_id}</td>
@@ -66,3 +67,4 @@
 				$(document).ready(function(){
 				});
 			</script>
+</shiro:user>
