--- a/WEB-INF/templates/admin/change_password.html
+++ b/WEB-INF/templates/admin/change_password.html
@@ -1,4 +1,4 @@
-<!--table id="role" class='table table-condensed'>
+﻿<!--table id="role" class='table table-condensed'>
    <tr><th colspan='4'><b>${n.i18n.crud_change_password_title.toUpperCase()}</b></th></tr>	<tr>
    	<td width=20% title="${n.i18n.crud_valid_length_prefix} 50 ${n.i18n.crud_valid_length_postfix}" id="id_label">${n.i18n.crud_change_password_old}<font>*</font></td>
    	<td width=30%>			<input  type=password class="form-control" name="pass_old" id="pass_old"><span id="id_msg"></span></td>
@@ -47,31 +47,31 @@
    	</div>
    	<div style="text-align:center"><span id="result" style="font-weight:bold;color:#039"></span></div>
    </div>						
-</div-->				                            
+</div-->
 <div class="box box-info box-solid ">
-   <div class="box-header">
-      <icon class="fa fa-power-off"></icon>
-      <b> ${n.i18n.crud_change_password_title.toUpperCase()}</b>																		
-   </div>
-   <div class="box-body no-padding">
-      <table class='table table-condensed'>
-         <tr>
-            <td><input placeholder='Type ${n.i18n.crud_change_password_old} *' type=password class="form-control" name="pass_old" id="pass_old"><span id="id_msg"></span></td>
-         </tr>
-         <tr>
-            <td><input placeholder='Type ${n.i18n.crud_change_password_new} *' type="password" class="form-control" name="pass_new" id="pass_new"><span id="role_name_msg"></span></td>
-         </tr>
-         <tr>
-            <td><input placeholder='Type ${n.i18n.crud_change_password_new_comfirm} *' type="password" class="form-control" name="pass_new_confirm" id="pass_new_confirm"><span id="description_msg"></span></td>
-         </tr>
-      </table>
-   </div>
-   <div class="box-footer">
-      <div class="col-md-12" style="text-align:center">
-         <button class="btn btn-primary" name="doNew" id="doNew"><i class="fa fa-plus-square"></i> ${n.i18n.crud_change_password_title}</button>									
-      </div>
-      <div style="text-align:center"><span id="result" style="font-weight:bold;color:#039"></span></div>
-   </div>
+    <div class="box-header">
+        <icon class="fa fa-power-off"></icon>
+        <b> ${n.i18n.crud_change_password_title.toUpperCase()}</b>
+    </div>
+    <div class="box-body no-padding">
+        <table class='table table-condensed'>
+            <tr>
+                <td><input placeholder='Type ${n.i18n.crud_change_password_old} *' type=password class="form-control" name="pass_old" id="pass_old"><span id="id_msg"></span></td>
+            </tr>
+            <tr>
+                <td><input placeholder='Type ${n.i18n.crud_change_password_new} *' type="password" class="form-control" name="pass_new" id="pass_new"><span id="role_name_msg"></span></td>
+            </tr>
+            <tr>
+                <td><input placeholder='Type ${n.i18n.crud_change_password_new_comfirm} *' type="password" class="form-control" name="pass_new_confirm" id="pass_new_confirm"><span id="description_msg"></span></td>
+            </tr>
+        </table>
+    </div>
+    <div class="box-footer">
+        <div class="col-md-12" style="text-align:center">
+            <button class="btn btn-primary" name="doNew" id="doNew"><i class="fa fa-plus-square"></i> ${n.i18n.crud_change_password_title}</button>
+        </div>
+        <div style="text-align:center"><span id="result" style="font-weight:bold;color:#039"></span></div>
+    </div>
 </div>
 <!--div class="content-wrapper">
    <section class="content">
@@ -110,37 +110,40 @@
    </div>
 </div-->
 <script type="text/javascript">
-   $(function(){
-   	$('#doNew').click(function(){
-   		if(!valid()){return;}
-   		var exec='&pass_old='+$('#pass_old').val()+'&pass_new='+$('#pass_new').val()+'&pass_confirm='+$('#pass_new_confirm').val();
-   		$('#result').html('${n.i18n.crud_process_message}');
-   		$.ajax({
-   			url: 'crud_exec.jsp?crud_type=admin/change_exec.html'+exec,
-   			success: function(data){ 
-   				if (data.trim()=="1.0"){
-   					$('#result').html("${n.i18n.crud_change_pass_message}"); 
-   				}else{
-   					$('#result').html(data);
-   				}
-   			}
-   		});
-   	});
-   });
-   function valid()
-   {
-    if($('#pass_new').val()==$('#pass_old').val())
-    {
-      $('#result').html("M&#7853;t kh&#7849;u m&#7899;i ph&#7843;i kh&#225;c m&#7853;t kh&#7849;u c&#361;"); 
-      return false;
-   }
-   if($('#pass_new').val()!=$('#pass_new_confirm').val())
-   {
-      $('#result').html("Nh&#7853;p l&#7841;i m&#7853;t kh&#7849;u m&#7899;i kh&#244;ng kh&#7899;p"); 
-      return false;
-   }
-   return true; 
-}
-$(document).ready(function(){
-});
+    $(function() {
+        $('#doNew').click(function() {
+            if (!valid()) {
+                return;
+            }
+            var exec = '&pass_old=' + $('#pass_old').val() + '&pass_new=' + $('#pass_new').val() + '&pass_confirm=' + $('#pass_new_confirm').val();
+            $('#result').html('${n.i18n.crud_process_message}');
+            $.ajax({
+                url: 'crud_exec.jsp?crud_type=admin/change_exec.html' + exec,
+                success: function(data) {
+                    if (data.trim() == "1.0") {
+                        $('#result').html("${n.i18n.crud_change_pass_message}");
+                    } else {
+                        $('#result').html(data);
+                    }
+                }
+            });
+        });
+    });
+
+    function valid() {
+        if ($('#pass_new').val() == $('#pass_old').val()) {
+            $('#result').html("M&#7853;t kh&#7849;u m&#7899;i ph&#7843;i kh&#225;c m&#7853;t kh&#7849;u c&#361;");
+            return false;
+        }
+        if ($('#pass_new').val() != $('#pass_new_confirm').val()) {
+            $('#result').html("Nh&#7853;p l&#7841;i m&#7853;t kh&#7849;u m&#7899;i kh&#244;ng kh&#7899;p");
+            return false;
+        }
+        if ($('#pass_new').val().length < 8 || $('#pass_new_confirm').val().length < 8) {
+            $('#result').html("Mật khẩu phải có độ lớn hơn 8 kí tự");
+            return false;
+        }
+        return true;
+    }
+    $(document).ready(function() {});
 </script>
