--- a/WEB-INF/templates/cost_data/edit.html
+++ b/WEB-INF/templates/cost_data/edit.html
@@ -1,7 +1,7 @@
 #set ($v = $u.ref("crud_search_cost_data_service","default",["$!{id}","$!{name}","$!{data}","$!{price}","$!{note}","$!{from_date}","$!{to_date}","1","1","$!{request.UserPrincipal.name}","$!{request.RemoteAddr}"],11)[0] )
 <table id="cost_data" class='table table-condensed'>
     <tr>
-        <th colspan='4'><b>${n.i18n.crud_search_button_message.toUpperCase()}</b></th>
+        <th colspan='4'><b>${n.i18n.crud_edit_button_message.toUpperCase()}</b></th>
     </tr>
     <tr>
         <td title="" id="id_label">${n.i18n.cost_data_id}</td>
@@ -23,22 +23,56 @@
             <input type="number" min="0" class="form-control" name="price" id="price" value='$!v["PRICE"]' placeholder="${n.i18n.tinh_theo_dong}"><span id="price_msg"></span>
         </td>
     </tr>
+    
     <tr>
-        <td title="" id="note_label">${n.i18n.cost_data_note}</td>
-        <td>
-            <input type="text" class="form-control" name="note" id="note" value='$!v["NOTE"]'><span id="note_msg"></span>
-        </td>
-        <td title="" id="from_date_label">${n.i18n.cost_data_from_date}</td>
+		<td title="" id="from_date_label">${n.i18n.cost_data_from_date}</td>
         <td>
             <input type="text" class="form-control" name="from_date" id="from_date" value='$!v["FROM_DATE"]'><span id="from_date_msg"></span>
         </td>
-    </tr>
-    <tr>
         <td title="" id="to_date_label">${n.i18n.cost_data_to_date}</td>
         <td>
             <input type="text" class="form-control" name="to_date" id="to_date" value='$!v["TO_DATE"]'><span id="to_date_msg"></span>
         </td>
     </tr>
+	<tr>
+        <td title="" id="note_label">${n.i18n.cost_data_note}</td>
+        <td>
+            <input type="text" class="form-control" name="note" id="note" value='$!v["NOTE"]'><span id="note_msg"></span>
+        </td>
+        <td title="" id="status_label">${n.i18n.cost_data_status}</td>
+        <td>
+            <select class="form-control" name="status" id="status" >
+				<option value='1' #if($!v["STATUS"] == "1") selected #end>active</option>
+				<option value='0' #if($!v["STATUS"] == "0") selected #end>deactive</option>
+			</select><span id="status_msg"></span>
+        </td>
+    </tr>
+	<!-- GIA CUOC THEO MOBIFONE-->
+	#if($!v["IS_ENTERPRISE"] == "true") 
+	<tr>
+        <td title="" id="is_mobifone_label">${n.i18n.cost_data_is_mobifone}</td>
+        <td id="mobifone_limit_td">
+            <input type="checkbox" name="is_mobifone" id="is_mobifone" #if($!v["IS_ENTERPRISE"] == "true") checked #end ><span id="is_mobifone_msg"></span>
+        </td>
+		
+        <td title="" id="mobifone_limit_label">${n.i18n.cost_data_mobifone_limit}</td>
+        <td>
+            <input type="number" min ="0" max="50" placeholder="max 50%" value='$!v["MOBIFONE_LIMIT"]' class="form-control" name="mobifone_limit" id="mobifone_limit"><span id="mobifone_limit_msg"></span>
+        </td>
+    </tr>
+	#else
+	<tr >
+        <td title="" id="is_mobifone_label">${n.i18n.cost_data_is_mobifone}</td>
+        <td id="mobifone_limit_td">
+            <input type="checkbox" name="is_mobifone" id="is_mobifone" #if($!v["IS_ENTERPRISE"] == "true") checked #end ><span id="is_mobifone_msg"></span>
+        </td>
+		
+        <td title="" id="mobifone_limit_label">${n.i18n.cost_data_mobifone_limit}</td>
+        <td>
+            <input type="number" min ="0" max="50" placeholder="max 50%" value='$!v["MOBIFONE_LIMIT"]' class="form-control" name="mobifone_limit" id="mobifone_limit"><span id="mobifone_limit_msg"></span>
+        </td>
+    </tr>
+	#end
     <tr id='control'>
         <td colspan='4' align='center'>
             <font id="result"></font>
@@ -75,7 +109,7 @@
                 return;
             }
 
-            var exec = '&id=' + $('#id').val() + '&name=' + $('#name').val() + '&data=' + $('#data').val() + '&price=' + $('#price').val() + '&note=' + $('#note').val() + '&from_date=' + $('#from_date').val() + '&to_date=' + $('#to_date').val() + '&userid=$!{request.UserPrincipal.name}&userip=$!{request.RemoteAddr}';
+            var exec = '&id=' + $('#id').val() + '&name=' + $('#name').val() + '&data=' + $('#data').val() + '&price=' + $('#price').val() + '&note=' + $('#note').val() + '&from_date=' + $('#from_date').val() + '&to_date=' + $('#to_date').val() + "&is_mobifone="+$('#is_mobifone').is(':checked')+"&data_limit="+$('#data_limit').val()+ "&status="+$('#status').val()+"&mobifone_limit="+$('#mobifone_limit').val() +'&userid=$!{request.UserPrincipal.name}&userip=$!{request.RemoteAddr}';
             $('#result').html('${n.i18n.crud_process_message}');
             $.ajax({
                 url: 'crud_exec.jsp?crud_type=cost_data/edit_exec.html' + exec,
@@ -139,6 +173,7 @@
                 }
             }
         });
+		
     });
     $(document).ready(function() {
         $('#from_date').datepicker({
