--- a/WEB-INF/templates/servicespac/index.html
+++ b/WEB-INF/templates/servicespac/index.html
@@ -1,78 +1,103 @@
-﻿<table id="phieuhuys" class='table table-condensed'>
-   <tr>
-      <th colspan='4'><h4><b>${n.i18n.reporp_by_service_pac}</b></h4></th>
-   </tr>
-   <tr>
-      <td width=10% title="${n.i18n.crud_valid_length_prefix} 30 ${n.i18n.crud_valid_length_postfix}">${n.i18n.curd_report_period}</td>
-      <td>
-         <select class="form-control" name="period" id="period">
+﻿<form id="TheForm" method="post" action="/report" target="Report">
+    <table id="phieuhuys" class='table table-condensed'>
+        <tr>
+            <th colspan='4'>
+                <h4><b>${n.i18n.reporp_by_service_pac}</b></h4>
+            </th>
+        </tr>
+        <tr>
+            <td width=10% title="${n.i18n.crud_valid_length_prefix} 30 ${n.i18n.crud_valid_length_postfix}">${n.i18n.curd_report_period}</td>
+            <td>
+                <select class="form-control" name="period" id="period">
 			<option value="">${n.i18n.crud_khong_chon}</option>
 			#set ($list = $u.qry("get_info_period_info_service_pac","default",[""],0))
 		  #foreach($i in $list)
 				<option value="$!i['month']">$!i['month']</option>
 		  #end
 	   </select><span id="service_type_msg"></span>
-      </td>
-	  <td width=10% title="${n.i18n.crud_valid_length_prefix} 30 ${n.i18n.crud_valid_length_postfix}">${n.i18n.curd_report_service_pac}</td>
-      <td>
-         <select class="form-control" name="service_pac" id="service_pac">
+            </td>
+            <td width=10% title="${n.i18n.crud_valid_length_prefix} 30 ${n.i18n.crud_valid_length_postfix}">${n.i18n.curd_report_service_pac}</td>
+            <td>
+                <select class="form-control" name="service_pac" id="service_pac">
 		  <option value="">${n.i18n.crud_khong_chon}</option>
 		  <option value="mvpn">${n.i18n.basicprice}</option>
 		  <option value="mbpx" >${n.i18n.bpx}</option>
 		  <option value="conference" >${n.i18n.conference}</option>
 		  <option value="all_synthetic" hidden >${n.i18n.all_synthetic}</option>
 	   </select>
-	   <span id="service_pac_msg"></span>
-      </td>
-   </tr>
-   
-   <tr hidden>
-      <td width="20%">
-         <input  type="checkbox" name="resynthetic" id="resynthetic"  style="margin-left:10%"/>&nbsp;&nbsp;&nbsp;&nbsp;${n.i18n.curd_report_resynthetic}
-      </td>
-	  <td></td>
-	</tr>
-	
-   <tr id='control'>
-      <td colspan='4' align='center'><font id="result"></font>
-         <button class="btn btn-primary" name="cmdPrint" id="cmdPrint" onclick="doExportReportPDF()"><i class="fa fa-print"></i> ${n.i18n.curd_report_print} &gt;</button>&nbsp;	
-         <button class="btn btn-primary"  onclick="doExportReportXLS()"><i class="fa fa-print"></i> ${n.i18n.curd_report_excel_output} &gt;</button>&nbsp;
-      </td>
-   </tr>
-</table>
+                <span id="service_pac_msg"></span>
+            </td>
+        </tr>
 
+        <tr hidden>
+            <td width="20%">
+                <input type="checkbox" name="resynthetic" id="resynthetic" style="margin-left:10%" />&nbsp;&nbsp;&nbsp;&nbsp;${n.i18n.curd_report_resynthetic}
+            </td>
+            <td></td>
+        </tr>
+
+        <tr id='control'>
+            <td colspan='4' align='center'>
+                <font id="result"></font>
+                <button class="btn btn-primary" name="cmdPrint" id="cmdPrint" onclick="doExportReportPDF()"><i class="fa fa-print"></i> ${n.i18n.curd_report_print} &gt;</button>&nbsp;
+                <button class="btn btn-primary" onclick="doExportReportXLS()"><i class="fa fa-print"></i> ${n.i18n.curd_report_excel_output} &gt;</button>&nbsp;
+            </td>
+        </tr>
+    </table>
+    <input hidden type="text" name="jasperExportType" value="pdf" style="margin-left:10%" />
+    <input hidden type="text" name="image_path" value="${pathroot}WEB-INF/templates/jasper/" style="margin-left:10%" />
+    <input hidden type="text" name="jasperFile" value="jasper/revenue_by_service_pac" style="margin-left:10%" />
+</form>
 <script type="text/javascript">
-   function doExportReportPDF(){
-		var ckChecked = $('#resynthetic:checkbox:checked').length ;
-		var ckValue  = 0 ;
-		if(ckChecked > 0){
-			ckValue = 1;
-		}
-		if($('#period').val() ==""){
-			alert("${n.i18n.chon_chu_ky}");
-			return;
-		}
-	   var jpPath = "${pathroot}WEB-INF/templates/jasper/";
-	   var s_ = window.location.protocol+"//"+window.location.host
-		+"/report/?jasperFile=jasper/revenue_by_service_pac&jasperExportType=pdf&image_path="+jpPath
-		+"&pmonth="+$('#period').val()+"&pservice_pac="+$('#service_pac').val()+"&resynthetic="+ckValue;
-	   window.open(s_);
-   }
-   function doExportReportXLS(){
-		var ckChecked = $('#resynthetic:checkbox:checked').length ;
-		var ckValue  = 0 ;
-		if(ckChecked > 0){
-			ckValue = 1;
-		}
-		if($('#period').val() ==""){
-			alert("${n.i18n.chon_chu_ky}");
-			return;
-		}
-	   var jpPath = "${pathroot}WEB-INF/templates/jasper/";
-	   var s_ = window.location.protocol+"//"+window.location.host
-		+"/report/?jasperFile=jasper/revenue_by_service_type&jasperExportType=xls&image_path="+jpPath
-		+"&pmonth="+$('#period').val()+"&pservice_pac="+$('#service_pac').val()+"&resynthetic="+ckValue;
-	   window.open(s_);
-   }
-   
+    function doExportReportPDF() {
+        var ckChecked = $('#resynthetic:checkbox:checked').length;
+        var ckValue = 0;
+        if (ckChecked > 0) {
+            ckValue = 1;
+        }
+        if ($('#period').val() == "") {
+            alert("${n.i18n.chon_chu_ky}");
+            return;
+        }
+        var jpPath = "${pathroot}WEB-INF/templates/jasper/";
+        //var s_ = window.location.protocol+"//"+window.location.host
+        //+"/report/?jasperFile=jasper/revenue_by_service_pac&jasperExportType=pdf&image_path="+jpPath
+        //+"&pmonth="+$('#period').val()+"&pservice_pac="+$('#service_pac').val()+"&resynthetic="+ckValue;
+        //window.open(s_);
+        var f = document.getElementById('TheForm');
+        f.jasperFile = "jasper/revenue_by_service_pac";
+        f.jasperExportType = "pdf";
+        f.image_path = jpPath;
+        //f.pmonth = $('#period').val(); 
+        //f.pservice_type = $('#service_type').val(); 
+        //f.resynthetic = ckValue; 
+        window.open('', 'Report');
+        f.submit();
+    }
+
+    function doExportReportXLS() {
+        var ckChecked = $('#resynthetic:checkbox:checked').length;
+        var ckValue = 0;
+        if (ckChecked > 0) {
+            ckValue = 1;
+        }
+        if ($('#period').val() == "") {
+            alert("${n.i18n.chon_chu_ky}");
+            return;
+        }
+        var jpPath = "${pathroot}WEB-INF/templates/jasper/";
+        //var s_ = window.location.protocol+"//"+window.location.host
+        //+"/report/?jasperFile=jasper/revenue_by_service_type&jasperExportType=xls&image_path="+jpPath
+        //+"&pmonth="+$('#period').val()+"&pservice_pac="+$('#service_pac').val()+"&resynthetic="+ckValue;
+        //window.open(s_);
+        var f = document.getElementById('TheForm');
+        f.jasperFile = "jasper/revenue_by_service_type";
+        f.jasperExportType = "xls";
+        f.image_path = jpPath;
+        //f.pmonth = $('#period').val(); 
+        //f.pservice_type = $('#service_type').val(); 
+        //f.resynthetic = ckValue; 
+        window.open('', 'Report');
+        f.submit();
+    }
 </script>
