--- a/WEB-INF/templates/user_info/index.html
+++ b/WEB-INF/templates/user_info/index.html
@@ -1,3 +1,4 @@
+<shiro:hasRole>
 <head>
    <link href="assets/bootstrap/plugins/iCheck/all.css" rel="stylesheet" type="text/css" />
    <script src="assets/bootstrap/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
@@ -190,3 +191,4 @@
     return pattern.test(email);
  }
 </script>
+</shiro:hasRole>
